[api] Create user and reset password;
